feat: add public user registration
